packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-explicit.js
import { FancyError } from './_shared.js';

export const GET = () => ({
	status: 400,
	body: new FancyError('oops')
});
